 For more information, visit www.phpvms.net
	Forums: http://www.phpvms.net/forum
	Documentation: http://www.phpvms.net/docs

 phpVMS is licenced under the following license:
   Creative Commons Attribution Non-commercial Share Alike (by-nc-sa)
   View license.txt in the root, or visit:
		http://creativecommons.org/licenses/by-nc-sa/3.0/
---

Build <<REVISION>> (Version 1.1.<<REVISION>>)

  * Basic stats in Admin Panel
  * View only active/inactive schedules
  * PIREP table fixed (major bug fix)
  
  Templates Changes:
	pirep_new.tpl - the Aircraft option field value has changed
			MAKE SURE YOU CHANGE THIS or else your PIREPS will fail
	pireps_viewall.tpl - Aircraft registration added to list
	pirep_viewreport.tpl - Aircraft added to view

Build 437 (Version 1.1.437)

  * Aircraft registration options added
  * Routes can be assigned specific aircraft/registration
  * Pilot avatars added, with sizing options
		(/lib/avatars need write permissions)
  * Delete pilots (go in the Pilot Options in Admin Panel)
  * Pilot country with flag images added
  * Dynamic signatures generated, to use on forums, etc
		(/lib/signatures need write permissions)
  * Bug fixes for servers with short_open_tags off
  * ACARS map shows the proper map type/centers according to settings
  * Admin edit of profile didn't recalculate for new rank
  * Bids are removed now when PIREP is done through ACARS
  * Updates to the updater, will automatically put new options in your local config
  	
  Template Changes (use WinMerge to see changes):
  
	registration_mainform.tpl
	profile_main.tpl
	profile_edit.tpl
	pilot_public_profile.tpl
	pilots_list.tpl
	pirep_new.tpl
	pirep_viewreport.tpl (reorganized)
	
	
Build 400 (Version 1.1.400)

  * FSACARS status updates and PIREPS support (thanks to Roger from www.fspaintshop.com for the icons!)
  * FSACARS configuration file automatically generated, specific to pilot (update your profile_main.tpl)