@@ -7,6 +7,8 @@ echo '<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key='.GOOGLE
 var urlbase = "<?php echo SITE_URL?>";
 </script>
 
+<meta http-equiv="Content-Type" content="text/html; charset=<?php echo Config::Get('PAGE_ENCODING');?>">
+
 <link rel="stylesheet" media="all" type="text/css" href="<?php echo SITE_URL?>/lib/css/phpvms.css" />
 
 <script type="text/javascript" src="<?php echo SITE_URL?>/lib/js/jquery.min.js"></script>
